cluster/apps/networking/adguard-work/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app adguard-work
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/instance: *app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
        app.kubernetes.io/instance: *app
    spec:
      containers:
        - name: *app
          image: adguard/adguardhome:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: adguard-work-work-volume
              mountPath: /opt/adguardhome/work
            - name: adguard-work-conf-volume
              mountPath: /opt/adguardhome/conf
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 250m
              memory: 500Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: adguard-work-work-volume
          hostPath:
            path: /home/elraro/home-ops/volumes/adguard-work/adguard-work-volume
        - name: adguard-work-conf-volume
          hostPath:
            path: /home/elraro/home-ops/volumes/adguard-work/adguard-conf-volume
