cluster/apps/networking/adguard-work/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app adguard-work
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    metallb.universe.tf/loadBalancerIPs: "${METALLB_ADGUARD_WORK_ADDR}"
spec:
  selector:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      name: adguardw-gui
      port: 3000
      targetPort: 3000
    - protocol: TCP
      name: adguardw-tcp
      port: 53
      targetPort: 53
    - protocol: UDP
      name: adguardw-udp
      port: 53
      targetPort: 53
